examples/9.network_policy/pod_mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql
spec:
  containers:
  - name: mysql-container
    image: mysql:5.6
    ports:
    - containerPort: 3306
