examples/9.network_policy/networkPolicy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy2
spec:
  podSelector:
    matchLabels:
      network: my-policy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mysql-allow
